# Copyright (c) PLUMgrid, Inc.
# Licensed under the Apache License, Version 2.0 (the "License")
include_directories(${CMAKE_SOURCE_DIR}/include)

add_executable(test_sanity test_sanity.cpp)
target_link_libraries(test_sanity iov)
add_executable(test_module_multi test_module_multi.cpp)
target_link_libraries(test_module_multi iov)
add_executable(test_module_pin test_module_pin.cpp)
target_link_libraries(test_module_pin iov)
add_executable(test_module_show_event test_module_show_event.cpp)
target_link_libraries(test_module_show_event iov)
add_executable(test_module_table_pin test_module_table_pin.cpp)
target_link_libraries(test_module_table_pin iov)
add_executable(test_module_table_update test_module_table_update.cpp)
target_link_libraries(test_module_table_update iov)
add_executable(test_module_table_lookup_elem test_module_table_lookup.cpp)
target_link_libraries(test_module_table_lookup_elem iov)
add_executable(test_module_table_lookup_metadata test_module_table_lookup_metadata.cpp)
target_link_libraries(test_module_table_lookup_metadata iov)
add_executable(test_module_show_table test_module_show_table.cpp)
target_link_libraries(test_module_show_table iov)



add_test(NAME style-check COMMAND ${CMAKE_SOURCE_DIR}/scripts/style-check.sh)
#set_tests_properties(style-check PROPERTIES PASS_REGULAR_EXPRESSION ".*")

add_test(NAME test_sanity COMMAND ./test_sanity)
add_test(NAME test_module_multi COMMAND sudo ./test_module_multi)
add_test(NAME test_module_pin COMMAND sudo ./test_module_pin)
add_test(NAME test_module_show_event COMMAND sudo ./test_module_show_event)
add_test(NAME test_module_table_pin COMMAND sudo ./test_module_table_pin)
add_test(NAME test_module_table_update COMMAND sudo ./test_module_table_update)
add_test(NAME test_module_table_lookup_elem COMMAND sudo ./test_module_table_lookup_elem)
add_test(NAME test_module_table_lookup_metadata COMMAND sudo ./test_module_table_lookup_metadata)
add_test(NAME test_module_show_table COMMAND sudo ./test_module_show_table)
